Refactor Settings