@@ -1,5 +1,9 @@
 package uk.ac.ncl.dwa.database;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import uk.ac.ncl.dwa.controller.Globals;
+
 import java.sql.*;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -7,6 +11,7 @@ import java.util.HashMap;
 import java.util.List;
 
 public class DBHandlerMysql extends DBHandler {
+    private final Logger logger = LoggerFactory.getLogger(getClass());
     String connectionString;
 
     public DBHandlerMysql(String connectionString) {
@@ -15,9 +20,15 @@ public class DBHandlerMysql extends DBHandler {
     }
 
     @Override
-    public List<Object> select(String tableName, String[] columns, String[] where) {
+    public List<Object> select(String tableName, String[] columns, String where) {
         Connection connection;
-        String sql = String.format("SELECT %s FROM %s", String.join(",", Arrays.asList(columns)), tableName);
+        String sql;
+        if (where.isBlank()) {
+            sql = String.format("SELECT %s FROM %s", String.join(",", Arrays.asList(columns)), tableName);
+        } else {
+            sql = String.format("SELECT %s FROM %s WHERE %s", String.join(",", Arrays.asList(columns)), tableName, where);
+            logger.info(sql);
+        }
         List<Object> returnList = new ArrayList<>();
         try {
             connection = DriverManager.getConnection(connectionString);
@@ -42,12 +53,68 @@ public class DBHandlerMysql extends DBHandler {
     }
 
     @Override
-    public List<Object> insert() {
-        return List.of();
+    public List<Object> insert(String tableName, String[] columns) {
+        Connection connection;
+        String values = String.join(",", Arrays.asList(columns));
+        values = "'" + values.replaceAll(",","','") + "'";
+        String sql = String.format("INSERT INTO %s VALUES (%s)", tableName, values);
+        logger.info(String.format(sql));
+        try {
+            connection = DriverManager.getConnection(connectionString);
+            PreparedStatement statement = connection.prepareStatement(sql);
+            statement.executeQuery();
+            connection.close();
+            return List.of();
+        } catch (SQLException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     @Override
-    public List<Object> update() {
-        return List.of();
+    public boolean update(String tableName, String[] columns, String[] values, String[] where) {
+        Connection connection;
+        String[] setString;
+        if (columns.length != values.length) {
+            throw new RuntimeException("Columns and values arrays do not match!");
+        } else {
+            setString = new String[columns.length];
+            for (int i=0; i<columns.length; i++) {
+                setString[i] = String.format("%s='%s'",columns[i],values[i]);
+            }
+
+        }
+        String setS = String.join(",", setString);
+        logger.info(setS);
+        String sql = String.format("UPDATE %s SET %s WHERE %s",
+                tableName, String.join(",", setString), where[0]);
+        logger.info(sql);
+        try {
+            connection = DriverManager.getConnection(connectionString);
+            PreparedStatement statement = connection.prepareStatement(sql);
+            statement.executeQuery();
+            connection.close();
+            return true;
+        } catch (SQLException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    @Override
+    public boolean deleteOne(String tableName, String column, String where) {
+        Connection connection;
+        try {
+            connection = (Connection) DriverManager.getConnection(connectionString);
+            String sql = String.format("DELETE FROM %s " +
+                    "WHERE %s='%s'",
+                    tableName, column, where);
+            logger.info(sql);
+            PreparedStatement statement = connection.prepareStatement(sql);
+            statement.executeQuery();
+            connection.close();
+            return true;
+        } catch (SQLException e) {
+            logger.info("Error deleting workshop from database:\n{}", e);
+            return false;
+        }
     }
 }
